# minicv

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  first_half_roadmap.md
examples/: ImageDifferenceExample.cpp
include/minicv/: EImageType.h  EPgmFormat.h  EPpmFormat.h  ERgbChannel.h  Image.h  ImageOperations.h  Mat.h  PgmImageIo.h  Point.h  PpmImageIo.h  Rect.h  Size.h
src/: Image.cpp  ImageOperations.cpp  Mat.cpp  PgmImageIo.cpp  PpmImageIo.cpp
tests/: ImageOperationsTest.cpp  ImageOperationsTest.h  ImageTest.cpp  PgmImageIoTest.cpp  PgmImageIoTest.h  PpmImageIoTest.cpp  PpmImageIoTest.h  image_test.cpp  image_test.h  main.cpp  mat_test.cpp  mat_test.h
